996
The issue exists in 2.10.1 as well:
{code}
$ cat I.java 
abstract class I { public enum E { E1 } }
$ cat J.java 
class J extends I {
  public void foo(E e) { }
}
$ cat S.scala 
object S { (new J).foo(null) }
$ ./bin/scalac -version
Scala compiler version 2.10.1 -- Copyright 2002-2013, LAMP/EPFL
$ ./bin/scalac I.java J.java S.scala 
J.java:2: error: not found: type E
  public void foo(E e) { }
                  ^
one error found
{code}
